add some content to landing page

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,14 @@
     <nav></nav>
     <header class="welcome">
       <h1>Hi, ich bin Beni!</h1>
+      <p>
+        Ich mag das Web und möchte gerne die Grundlagen und Zusammenhänge besser
+        verstehen können.
+      </p>
+      <p>
+        Diese Website ist ein Experiment, wie weit ich mit reinem HTML, CSS und
+        etwas JS komme. 🧪
+      </p>
     </header>
     <main></main>
   </body>
