--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   </head>
   <body>
-    <nav></nav>
+    <nav class="navigation">
+      <a class="navigation__home" href="/">👋</a>
+      <ul class="navigation__links">
+        <li><a href="">About</a></li>
+        <li><a href="">Dumme Frage?!</a></li>
+      </ul>
+    </nav>
     <header class="welcome">
       <h1>Hi, ich bin Beni!</h1>
       <p>
