--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,10 @@
     <title>Hi, ich bin Beni!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <script src="components/PageNavigation.js" defer></script>
   </head>
   <body>
-    <nav class="navigation">
-      <a class="navigation__home" href="/">👋</a>
-      <ul class="navigation__links">
-        <li><a href="">About</a></li>
-        <li><a href="">Dumme Frage?!</a></li>
-      </ul>
-    </nav>
+    <page-navigation></page-navigation>
     <header class="welcome">
       <h1>Hi, ich bin Beni!</h1>
       <p>
