Use SSI instead of templates
Loading templates to share common HTML like the navigation is a bit
 tricky and did not work well. SSI is the more appropriated solution for
 those situations.

--- a/src/dummeFrage.html
+++ b/src/dummeFrage.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Dumme Frage?!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="components/PageLayout.js" type="module"></script>
   </head>
   <body>
-    <page-layout>
+    <!--# include file="includes/navigation.html"-->
+    <main class="page-layout">
       <h1>Dumme Frage?!</h1>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae dolores
@@ -25,6 +24,6 @@
         dolore eligendi numquam facilis animi, sit veritatis! Facere esse
         distinctio enim id!
       </p>
-    </page-layout>
+    </main>
   </body>
 </html>
