--- a/src/about.html
+++ b/src/about.html
@@ -6,10 +6,10 @@
     <title>Das bin ich.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="components/PageLayout.js" type="module"></script>
   </head>
   <body>
-    <page-layout>
+    <!--# include file="includes/navigation.html"-->
+    <main class="page-layout">
       <h1>Das bin ich.</h1>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae dolores
@@ -17,6 +17,6 @@
         dolore eligendi numquam facilis animi, sit veritatis! Facere esse
         distinctio enim id!
       </p>
-    </page-layout>
+    </main>
   </body>
 </html>
