Add style guide html to style some HTML elements

--- a/src/about.html
+++ b/src/about.html
@@ -17,6 +17,15 @@
         dolore eligendi numquam facilis animi, sit veritatis! Facere esse
         distinctio enim id!
       </p>
+      <p>
+        Consectetur adipisicing elit. Quae dolores et voluptatem soluta tenetur,
+        exercitationem, dignissimos provident quia dolore eligendi numquam
+        facilis animi, sit veritatis! Facere esse distinctio enim id!
+      </p>
+      <p>
+        Exercitationem, dignissimos provident quia dolore eligendi numquam
+        facilis animi.
+      </p>
     </main>
   </body>
 </html>
