Improve responsive page layout

--- a/src/about.html
+++ b/src/about.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   </head>
   <body>
-    <!--# include file="includes/navigation.html"-->
-    <main class="page-layout">
+    <!--# include file="includes/header.html"-->
+    <main>
       <h1>Das bin ich.</h1>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae dolores
