--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   </head>
   <body>
-    <!--# include file="includes/navigation.html"-->
-    <header class="welcome">
+    <!--# include file="includes/header.html"-->
+    <main class="welcome">
       <h1>Hi, ich bin Beni!</h1>
       <p>
         Ich mag das Web und möchte gerne die Grundlagen und Zusammenhänge besser
@@ -19,7 +19,6 @@
         Diese Website ist ein Experiment, wie weit ich mit reinem HTML, CSS und
         etwas JS komme. 🧪
       </p>
-    </header>
-    <main></main>
+    </main>
   </body>
 </html>
