--- a/src/dummeFrage.html
+++ b/src/dummeFrage.html
@@ -36,8 +36,8 @@
     </style>
   </head>
   <body>
-    <!--# include file="includes/navigation.html"-->
-    <main class="page-layout">
+    <!--# include file="includes/header.html"-->
+    <main>
       <h1>Dumme Frage?!</h1>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae dolores
